# AuthService

./: .dockerignore  .gitignore  Dockerfile  database.py  merchant_views.py  nginx.conf  pyproject.toml  views.py
auth/clients/: __init__.py  merchant_client.py  user_client.py
auth/dao/: __init__.py  simple_password_auth_dao.py
auth/dto/: __init__.py  userinfo.py
auth/exceptions/: __init__.py  user_exc.py  user_registration_exc.py
auth/models/: __init__.py  auth_model.py
auth/services/: __init__.py  merchant_oauth_service.py  oauth_password_auth_service.py  simple_password_auth_service.py
auth/utils/: api_utils.py  security.py  token_utils.py
